# oop_3

./: CMakeLists.txt
.devcontainer/: devcontainer.json
include/: Array.h  Figure.h  Hexagon.h  Octagon.h  Triangle.h
src/: Array.cpp  Figure.cpp  Hexagon.cpp  Octagon.cpp  Triangle.cpp  main.cpp
test/: tests.cpp
